@@ -20,31 +20,10 @@
 ## on GNU make and gcc.  It is only included in the generated
 ## Makefile.in if `automake' is not passed the `--include-deps' flag.
 
-## We have to use $(CC), not `gcc', even though we do rely on gcc to
-## do dependency tracking.  We have to do this because `gcc' is not
-## the real name of the compiler when cross-compiling.
-MKDEP = $(CC) -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
-
 ## We must create the .deps directory if it doesn't exist.  We do it
 ## in this strange way because of a buglet in make -- it won't try to
 ## create .deps/.P if the .deps directory doesn't exist.
 DEPS_MAGIC := $(shell mkdir .deps > /dev/null 2>&1 || :)
-## We use ".P" as the name of our placeholder because it can't be
-## duplicated by any C source file.  (Well, there could be ".c", but
-## no one does that in practice)
--include .deps/.P
-## This depends on $(BUILT_SOURCES) because that lets us generate
-## dependencies for files that don't exist at the start of a fresh
-## build.
-.deps/.P: $(BUILT_SOURCES)
-## Use ":" here and not "echo timestamp".  Otherwise GNU Make barfs:
-## .deps/.P:1: *** missing separator.  Stop.
-## Actually, use a plain "echo" and not ":".  Why?  From the Autoconf
-## manual, node Automatic Remaking:
-## On some old BSD systems, `touch' or any command that results in an
-## empty file does not update the timestamps, so use a command like
-## `echo' as a workaround.
-	echo > $@
 
 -include $(DEP_FILES)
 
