@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
+## Copyright (C) 1994, 1995, 1996, 1997, 1998 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -15,10 +15,14 @@
 ## along with this program; if not, write to the Free Software
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
-.deps/%.P: %@EXT@
-	@echo "Computing dependencies for $<..."
-	@o='o'; \
-ONLYC	test -n "$o" && o='$$o'; \
-	$(@MKDEP@) $< >$@.tmp \
-	  && sed "s,^\(.*\)\.o:,\1.$$o \1.l$$o $@:," < $@.tmp > $@ \
-	  && rm -f $@.tmp
+## FIXME: should use @EXT@, but that didn't work.
+%.o: %EXT
+## FIXME: should use @PFX@, but that didn't work.
+	@echo '$(PFXCOMPILE) -c $<'; \
+	DEPENDENCIES_OUTPUT='.deps/$(*F).P'; \
+	export DEPENDENCIES_OUTPUT; \
+## Note that using DEPENDENCIES_OUTPUT causes gcc to append to the
+## named file.  So we truncate it explicitly.
+	: > .deps/$(*F).P; \
+## FIXME: should use @PFX@, but that didn't work.
+	$(PFXCOMPILE) -c $<
