@@ -8,6 +8,7 @@ New in 1.2d:
 * aclocal gives error if `AM_' macro not found
 * Passed YFLAGS, not YACCFLAGS, to yacc 
 * AM_PROG_CC_STDC does not have to come before AC_PROG_CPP
+* Dependencies computed as a side effect of compilation
 
 New in 1.2:
 * Bug fixes
