@@ -1,5 +1,17 @@
 Thu Feb 12 22:27:05 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (get_object_extension): Conditionally include .c.o
+	rule from compile.am.
+	(handle_dependencies): Generate correct code when including new
+	depend2.am.
+	(file_contents_with_transform): Better error reporting.
+	* depend.am (MKDEP): Removed.
+	(.deps/.P): Removed.  Don't include .deps/.P.
+	* compile.am (.c.o): Now conditional on dependencies not being
+	generated by compiles.
+	* depend2.am (%.o): New rule.
+	(.deps/%.P): Removed.
+
 	* tags.am (TAGS): Uniquify list of files.  From Harlan Stenn.
 
 	* aclocal.in (scan_m4_files): Reverse-sort keys when constructing
